Added lab and midterm files

--- a/LAB_1/MIDTERM-EXAM(testimonials section)/index.html
+++ b/LAB_1/MIDTERM-EXAM(testimonials section)/index.html
@@ -25,8 +25,8 @@
     <li><a href="#">Who we are</a></li>
     <li><a href="#">Projects</a></li>
     <li><a href="#">Clients</a></li>
-    <li><a href="/LAB_1/RestAPI.html">API Demo</a></li>
-    <li><a href="/LAB_1/checkout.html">CheckOut</a></li>
+    <li><a href="/LAB_1/Assignment 2 — Single Page CRUD App (jQuery + REST API)/RestAPI.html">API Demo</a></li>
+    <li><a href="/LAB_1/Lab Assignment 2 — Client-Side Form Validation (jQuery)/checkout.html">CheckOut</a></li>
     <li>
       <a href="#" aria-label="Search">
         <i class="fa fa-search" aria-hidden="true"></i>
