--- a/LAB_1/index.html
+++ b/LAB_1/index.html
@@ -87,7 +87,7 @@
         <div class="carousel-content">
            <div style="font-weight:bold; color:#888;">CLIENT LOGO</div>
         </div>
-        <button class="carousel-btn">›</button>
+        <button class="carousel-btn"></button>
       </div>
 
       <div class="testimonial">
